--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -26,4 +26,24 @@
 
 <br>
 
+<div class="container">
+<div class="row">
+  <div class="col">
+    <th>Title<th>
+  </div>
+  <div class="col">
+    <th>Description</th>
+  </div>
+  <div class="col">
+    Column
+  </div>
+  <div class="col">
+    Column
+  </div>
+  <div class="col">
+    Column
+  </div>
+</div>
+</div>
+
 <%= link_to 'New Project', new_project_path %>
